[package]
name = "pewter"
version = "0.0.1-prerelease"
edition = "2021"
description = "A library for reading and writing PE files"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"

[dev-dependencies]

[features]
default = [ "std", "fast-rw"]
std = []
fast-rw = []
